2009-03-14  Kaity G. B. <uberChick@uberChicGeekChick.Com>
	
	* src/send-message-dialog.c: message_setup
		message_text_button_press_cb(*new*)
		message_text_populate_popup_cb
		Spell checking can be activated via right clicking an
		incorrectly spelled word or via the keyboard's 'context menu'
		key.

	* src/glade.c: glade_get_file & glade_load_file
		I have made a few small changes as I impliment support for
		libglade-2.0 instead of the previous use of glade-2 exported
		xml files.

	
2009-03-13  Kaity G. B. <uberChick@uberChicGeekChick.Com>

	* data/: greet-tweet-know.svg & greet-tweet-know.png
		*uber-w00t!* Greet-Tweet-Know now has its own icon & its def
		uber more aesthetic than Twitux's icon ever was.

	* src/*.h: #define(s)
		I have removed TWITUX from the header defines & from data
		types.  Now all structures are as application ambigious as
		possible so if any one wants to fork Greet-Tweet-Know it will
		be as easy as possible.

2009-03-09  Kaity G. B. <uberChick@uberChicGeekChick.Com>
	* libtwitux/*: removed.
		The source that was in libtwitux, which wasn't eve being
		programmed as a library but instead this is where most of the
		source that relied on other libraries was being placed.  It
		was all only useful to the project.  Instead of exposing
		twitter connection, messaging, & etc methods - which would
		make sense. As I integrate Greet-Tweet-Know into connectED I
		will be customizing the build system, possible via a new
		configure script, eg ./libconfigure. ~shrug~ I'll cross that
		bridge when I get to it.

2009-03-06  Kaity G. B. <uberChick@uberChicGeekChick.Com>

	* src/send-message-dialog.c: message_text_populate_popup_cb
		I changed where the dialog's textview iter is polled
		from so spell checking is invoked both when button2 and the
		keyboard's 'context menu key' is pressed.
							
	* po/Makefile.in: stamp-it
		removed circular references to Makefile & POTFILES caused
		because 'make POTFILES: stamp-it' supersedes 'make stamp-it'.
	